--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,11 @@
   "main": "src/index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "dev:android": "expo run:android",
+    "dev:ios": "expo run:ios"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -16,6 +18,7 @@
     "@reduxjs/toolkit": "^2.11.2",
     "clsx": "^2.1.1",
     "expo": "~54.0.31",
+    "expo-dev-client": "^6.0.20",
     "expo-notifications": "^0.32.16",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.562.0",
