feat: add voice chat, push notifications, and incremental task unlocking
- Implement voice chat endpoint with OpenAI Whisper transcription and GPT-3.5 responses
- Add push token registration and sickness mode toggle endpoints
- Enhance enforcer command with push notifications for missed tasks
- Add level-based task unlocking logic and properties
- Update frontend with voice recording, task creation, and API integrations
- Add comprehensive tests for scoring logic and onboarding unlocking

Closes tasks in Phase 4 and Phase 5 from TODO_TASKS.md

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -20,11 +20,14 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.sentinl"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-dev-client"]
+    "plugins": [
+      "expo-dev-client"
+    ]
   }
 }
