--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.11.2",
     "clsx": "^2.1.1",
     "expo": "~54.0.31",
+    "expo-av": "~16.0.8",
     "expo-dev-client": "^6.0.20",
     "expo-notifications": "^0.32.16",
     "expo-status-bar": "~3.0.9",
