feat: Add SentinL3D avatar component with custom skin shader and facial animations
feat: Implement CreateTask screen with dynamic milestone management and difficulty selection

build: Create installation script for Android SDK with necessary components and environment setup

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -28,6 +28,12 @@
     },
     "plugins": [
       "expo-dev-client"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "b5ce8a76-8d49-48e8-ac79-16d1098b1265"
+      }
+    },
+    "owner": "vista-forge"
   }
 }
