--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,18 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/bottom-tabs": "^7.10.0",
     "@react-navigation/drawer": "^7.7.11",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/stack": "^7.6.14",
+    "@react-three/fiber": "^9.5.0",
     "@reduxjs/toolkit": "^2.11.2",
     "clsx": "^2.1.1",
     "expo": "~54.0.31",
     "expo-av": "~16.0.8",
+    "expo-clipboard": "^8.0.8",
     "expo-dev-client": "^6.0.20",
+    "expo-gl": "^16.0.9",
     "expo-notifications": "^0.32.16",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.562.0",
@@ -36,7 +40,8 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "3.4.1"
+    "tailwindcss": "3.4.1",
+    "three": "^0.182.0"
   },
   "private": true
 }
